--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="skills">
         <h2>Skills</h2>
         <ul>
-            <li>Programming: (Add your languages here)</li>
+            <li>Programming: (python,html,css,java)</li>
             <li>Tools: Git, GitHub, VS Code</li>
         </ul>
     </section>
