--- a/index.html
+++ b/index.html
@@ -5,45 +5,95 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manusha Gundepangu | Portfolio</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 0 20px; color: #333; }
-        header { border-bottom: 2px solid #eaeaea; padding-bottom: 20px; }
-        h1 { color: #2c3e50; }
-        .contact-links a { margin-right: 15px; color: #3498db; text-decoration: none; font-weight: bold; }
-        section { margin-top: 30px; }
-        .project { background: #f9f9f9; padding: 15px; border-radius: 5px; margin-bottom: 10px; }
+        /* Modern Background Gradient */
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Segoe UI', sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+        }
+
+        /* Glassmorphism Effect */
+        .glass-card {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(15px);
+            -webkit-backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 20px;
+            padding: 40px;
+            width: 90%;
+            max-width: 500px;
+            text-align: center;
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
+        }
+
+        h1 { margin: 10px 0; font-size: 2.5rem; letter-spacing: 1px; }
+        p { font-size: 1.1rem; opacity: 0.9; margin-bottom: 25px; }
+
+        /* Skill Tags */
+        .skills {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
+            margin-bottom: 30px;
+        }
+
+        .skill {
+            background: rgba(255, 255, 255, 0.2);
+            padding: 8px 15px;
+            border-radius: 50px;
+            font-size: 0.85rem;
+            transition: 0.3s;
+        }
+
+        .skill:hover { background: #fff; color: #764ba2; cursor: default; }
+
+        /* Professional Buttons */
+        .links { display: flex; flex-direction: column; gap: 15px; }
+        .btn {
+            text-decoration: none;
+            color: white;
+            background: rgba(255, 255, 255, 0.15);
+            padding: 12px;
+            border-radius: 12px;
+            font-weight: 600;
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .btn:hover {
+            background: white;
+            color: #764ba2;
+            transform: translateY(-3px);
+        }
     </style>
 </head>
 <body>
 
-    <header>
+    <div class="glass-card">
         <h1>Manusha Gundepangu</h1>
-        <p>Aspiring Developer | Engineering Student</p>
-        <div class="contact-links">
-            <a href="https://www.linkedin.com/in/manusha-gundepangu">LinkedIn</a>
-            <a href="https://github.com/ManushaGundepangu">GitHub</a>
+        <p>Computer Science Student & Developer</p>
+
+        <div class="skills">
+            <span class="skill">Python</span>
+            <span class="skill">Java</span>
+            <span class="skill">SQL</span>
+            <span class="skill">Web Dev</span>
+            <span class="skill">Git/GitHub</span>
         </div>
-    </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Welcome to my portfolio! I am a student focused on building technical skills in software development and problem-solving.</p>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="project">
-            <h3>Project One Title</h3>
-            <p>A brief description of a project you worked on. Mentions tools used like Python, Java, or HTML.</p>
+        <div class="links">
+            <a href="https://github.com/ManushaGundepangu" class="btn">💻 View My GitHub</a>
+            <a href="https://www.linkedin.com/in/manusha-gundepangu" class="btn">🔗 Connect on LinkedIn</a>
+            <a href="mailto:your-email@example.com" class="btn">📧 Email Me</a>
         </div>
-    </section>
-
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li>Programming: (python,html,css,java)</li>
-            <li>Tools: Git, GitHub, VS Code</li>
-        </ul>
-    </section>
+    </div>
 
 </body>
 </html>
