--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         </div>
 
         <div class="links">
-            <a href="https://github.com/ManushaGundepangu" class="btn">💻 View My GitHub</a>
-            <a href="https://www.linkedin.com/in/manusha-gundepangu" class="btn">🔗 Connect on LinkedIn</a>
-            <a href="mailto:your-email@example.com" class="btn">📧 Email Me</a>
+            <a href="https://github.com/ManushaGundepangu" class="btn"> View My GitHub</a>
+            <a href="https://www.linkedin.com/in/manusha-gundepangu" class="btn"> Connect on LinkedIn</a>
+            <a href="mailto:your-email@example.com" class="btn"> Email Me</a>
         </div>
     </div>
 
